Menu visible. Tabs for documents implemented on UI. No logic behind them yet. Need to figure out how to get windows to be a fixes size with scrolling. Currently they have a scrollbar, but resize to meet requirements.

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -5,9 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 50px;
+
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
